--- a/api/demo-api/pom.xml
+++ b/api/demo-api/pom.xml
@@ -5,31 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.belacloud</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>api</artifactId>
         <version>1.0.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>api</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>demo-api</module>
-    </modules>
+    <artifactId>demo-api</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-nacos-spring-boot-starter</artifactId>
-        </dependency>
-    </dependencies>
 
 </project>
