--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -28,3 +28,4 @@ spring:
     import:
       - nacos:gateway.yml?refreshEnabled=true
       - nacos:dubbo.yml?refreshEnabled=true
+      - nacos:redis.yml?refreshEnabled=true
