--- a/modules/system/src/main/resources/application.yml
+++ b/modules/system/src/main/resources/application.yml
@@ -11,3 +11,4 @@ spring:
       - nacos:datasource.yml?refreshEnabled=true
       - nacos:system-service.yml?refreshEnabled=true
       - nacos:dubbo.yml?refreshEnabled=true
+      - nacos:redis.yml?refreshEnabled=true
