--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -29,3 +29,4 @@ spring:
       - nacos:gateway.yml?refreshEnabled=true
       - nacos:dubbo.yml?refreshEnabled=true
       - nacos:redis.yml?refreshEnabled=true
+      - nacos:sa-token.yml?refreshEnabled=true
